--- a/ProjectManagement/src/main/resources/templates/homestudent.html
+++ b/ProjectManagement/src/main/resources/templates/homestudent.html
@@ -26,6 +26,12 @@
     <div class="sidebar col-3"></div>
     <!-- ใส่คอนเท้นหลัก บริเวณด้านซ้าย -->
     <div class="col-9 main-content">
+
+
+        <span th:text="${session.username}"></span>
+        <span th:text="${session.bio}"></span>
+
+
     </div>
 </div>
 <script src="assets/plugins/global/plugins.bundle.js"></script>
