--- a/ProjectManagement/src/main/resources/templates/joingroup.html
+++ b/ProjectManagement/src/main/resources/templates/joingroup.html
@@ -15,6 +15,12 @@
     <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
     <link href="/styles.css" rel="stylesheet"  type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css">
+    <script type="text/javascript" src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap5.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+   
     <title>Join Group</title>
     <style>
 
@@ -37,7 +43,8 @@
                             <label for="subjectId"><b>Subject ID</b></label>
                             <label for="section"><b>Section:</b></label>
                             <label for="tag"><b>Skills</b></label>
-                            <div></div> <!-- Empty div for the submit button -->
+                            <div></div> 
+                            <!-- Empty div for the submit button -->
 
                             <select class="form-select"  id="subjectID" data-control="select2" data-placeholder="Select an option"> 
                             <option
@@ -83,7 +90,14 @@
                         <th class="fixed-column">Action</th>
                     </tr>
                     </thead>
-
+                    <!-- Sort ssearch zone -->
+                    <select name="sortOption" id="sortsearch">
+                    <option value="#">Default</option>
+                    <!-- <option value="joinedMembers">Sort by Joined Members</option> -->
+                    <option value="groupNameAtoZ">Sort by Groupname A-Z</option>
+                    <option value="groupNameZtoA">Sort by Groupname Z-A</option>
+                    </select>
+                   <!-- Sort ssearch zone -->
                         <tbody >
                         <tr th:each="group : ${groups}">
                             <td th:text="${group.groupName}"><span th:text="${group['groupName']}"></span></td>
@@ -91,7 +105,25 @@
                             <td th:text="${group['tag']}"></td>
                             <td th:text="${group['joinedMember']} + '/'+ ${group['maxMember']}"></td>
                             <td>
-                                <button type="button" class="btn btn-primary">More Detail</button>
+                                <button type="button" class="btn btn-primary" id="moreDetailButton">More Detail</button>
+                                <!-- MODAL--> 
+                                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                      <div class="modal-content">
+                                        <div class="modal-header">
+                                          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                          <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                                        </div>
+                                        <div class="modal-body">
+                                          ...
+                                        </div>
+                                        <div class="modal-footer">
+                                          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                          <button type="button" class="btn btn-primary">Save changes</button>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
                             </td>
                         </tr>
                         </tbody>
@@ -110,6 +142,11 @@
 <script src="assets/js/custom/documentation/documentation.js"></script>
 
 <script>
+    $(document).ready(function() {
+    $(document).on('click', '#moreDetailButton', function(){
+    $('#myModal').modal('show');
+  });
+});
     var filename = window.location.pathname.split("/").pop();
     $(document).ready(function() {
 
@@ -137,29 +174,7 @@
     }
     var notifications = 5; // Replace with the actual number of notifications
 
-    // Update the badge when the page loads
-    window.onload = function() {
-        updateBadge();
-    };
 
-    function updateBadge() {
-        var badge = document.getElementById('badge');
-        if (notifications > 0) {
-            badge.textContent = notifications;
-            badge.style.display = 'inline';
-        } else {
-            badge.style.display = 'none';
-        }
-    }
-
-    function toggleNotifications() {
-        var inbox = document.getElementById('notification-inbox');
-        if (inbox.style.display === 'none') {
-            inbox.style.display = 'block';
-        } else {
-            inbox.style.display = 'none';
-        }
-    }
     function searchGroup(event) {
         event.preventDefault();
 
@@ -185,6 +200,25 @@
             }
         });
     }
+    $("#sortsearch").change(function(sortOption) {
+            sort(this);
+        });
+      function sort(select) {
+        var sortOption = select.value;
+        console.log("sortlog:", sortOption);
+        $.ajax({
+          url: "/sortGroupBySelection",
+          type: "POST",
+          data: {
+            sortOption: sortOption,
+          },
+          success: function (data) {
+            console.log("sortlog:", data);
+            let table = $(data).find("#user-table");
+            $("#user-table").replaceWith(table);
+          },
+        });
+      }
 
 
 </script>
