--- a/ProjectManagement/src/main/resources/templates/joingroup.html
+++ b/ProjectManagement/src/main/resources/templates/joingroup.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html> 
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -73,8 +73,8 @@
                                         <td><input type="checkbox" name="tester" value="designer">Designer</td>
                                     </tr>
                                 </table>
-                            </div>
-                            <input class="btn btn-primary search" type="submit" value="Search">
+                            </div >
+                            <input class="btn btn-primary search doc_id " type="submit" value="Search"> 
                         </div>
                     </form>
                 </div>
@@ -93,38 +93,54 @@
                     <!-- Sort ssearch zone -->
                     <select name="sortOption" id="sortsearch">
                     <option value="#">Default</option>
-                    <!-- <option value="joinedMembers">Sort by Joined Members</option> -->
+                     <option value="joinedMembers">Sort by Joined Members</option>
                     <option value="groupNameAtoZ">Sort by Groupname A-Z</option>
                     <option value="groupNameZtoA">Sort by Groupname Z-A</option>
                     </select>
                    <!-- Sort ssearch zone -->
                         <tbody >
                         <tr th:each="group : ${groups}">
-                            <td th:text="${group.groupName}"><span th:text="${group['groupName']}"></span></td>
+                            <td th:text="${group['groupName']}"></td>
                             <td th:text="${group['section']}"></td>
                             <td th:text="${group['tag']}"></td>
                             <td th:text="${group['joinedMember']} + '/'+ ${group['maxMember']}"></td>
                             <td>
-                                <button type="button" class="btn btn-primary" id="moreDetailButton">More Detail</button>
-                                <!-- MODAL--> 
-                                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                      <div class="modal-content">
-                                        <div class="modal-header">
-                                          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                          <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-                                        </div>
+                                <!-- <button type="button" class="btn btn-primary more-detail" th:data-document-id="${group.documentId}" onclick="getGroupDetail(this)">More Detail</button> -->
+                              <button type="button" class="btn btn-primary more-detail" onclick="getGroupDetail(this)" th:data-document-id="${group.documentId}" id="moreDetailButton" >More Detail</button> 
+                              <!-- MODAL--> 
+                                
+                              <div class="modal fade" id="GroupDetailModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                  <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                    </div>
                                         <div class="modal-body">
-                                          ...
+                                            <table class="detail-table" id="groupdetailtable">
+                                                <tr th:each="groupde : ${groupdetail}">
+                                                    <td><span th:text="${groupde.groupName}"></span></td>
+                                                    <td>Subject ID<span th:text="${groupde.subject.subjectID}"></span></td>
+                                                    <td>Member<span th:text="${groupde.joinedMember}"></span></td>
+                                                    <td>Section<span th:text="${groupde.section}"></span></td>
+                                                    <td><span th:text="${groupde.groupOwner}"></span></td>
+                                                    <td>Group Member<span th:text="${groupde.joinedMember}+'/'+${groupde.maxMember}"></span></td>
+                                                    <td>
+                                                        <div th:each="tag : ${groupde.tag}">
+                                                            <span th:text="${tag}"></span>
+                                                        </div>
+                                                    </td>
+                                                    <td><span th:text="${groupde.groupDescription}"></span></td>
+                                                </tr>
+                                            </table>
                                         </div>
-                                        <div class="modal-footer">
-                                          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                          <button type="button" class="btn btn-primary">Save changes</button>
-                                        </div>
-                                      </div>
+                                    <div class="modal-footer">
+                                      <button type="button" class="btn btn-primary">Join Group</button>
                                     </div>
                                   </div>
-                            </td>
+                                </div>
+                              </div>
+                            
+                            </td>  
                         </tr>
                         </tbody>
                 </table>
@@ -142,11 +158,7 @@
 <script src="assets/js/custom/documentation/documentation.js"></script>
 
 <script>
-    $(document).ready(function() {
-    $(document).on('click', '#moreDetailButton', function(){
-    $('#myModal').modal('show');
-  });
-});
+
     var filename = window.location.pathname.split("/").pop();
     $(document).ready(function() {
 
@@ -194,7 +206,7 @@
                 skills: skills
             },
             success: function(data) {
-                console.log('data:', data);
+                //console.log('data:', data);
                 let table = $(data).find('#user-table');
                 $('#user-table').replaceWith(table);
             }
@@ -219,7 +231,25 @@
           },
         });
       }
-
+// FUNC SHOW GROUP DETAIL
+      function getGroupDetail(element){
+    var docId = element.getAttribute('data-document-id');
+    console.log("docId: " + docId);
+    $.ajax({
+        url: "/moregroupdetail",
+        type: "GET",
+        data: {documentId: docId},
+        success: function (data) {
+            // Parse the data to HTML
+            console.log("data: " + data)
+            $("#GroupDetailModal .modal-body").html(data);
+            $("#GroupDetailModal").modal("show");
+        },
+        error: function (data) {
+            console.log("error: " + data)
+        },
+    });
+}
 
 </script>
 </body>
